# confusables

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  publish-npm.yml  publish-rs.yml
crates/confusables/: CHANGELOG.md  Cargo.toml  README.md
crates/confusables-js/: CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js  test.mjs
crates/confusables-js/.github/workflows/: CI.yml
crates/confusables-js/__test__/: index.spec.mjs
crates/confusables-js/npm/android-arm-eabi/: README.md  package.json
crates/confusables-js/npm/android-arm64/: README.md  package.json
crates/confusables-js/npm/darwin-arm64/: README.md  package.json
crates/confusables-js/npm/darwin-universal/: README.md  package.json
crates/confusables-js/npm/darwin-x64/: README.md  package.json
crates/confusables-js/npm/freebsd-x64/: README.md  package.json
crates/confusables-js/npm/linux-arm-gnueabihf/: README.md  package.json
crates/confusables-js/npm/linux-arm64-gnu/: README.md  package.json
crates/confusables-js/npm/linux-arm64-musl/: README.md  package.json
crates/confusables-js/npm/linux-x64-gnu/: README.md  package.json
crates/confusables-js/npm/linux-x64-musl/: README.md  package.json
crates/confusables-js/npm/win32-arm64-msvc/: README.md  package.json
crates/confusables-js/npm/win32-ia32-msvc/: README.md  package.json
crates/confusables-js/npm/win32-x64-msvc/: README.md  package.json
crates/confusables-js/src/: lib.rs
crates/confusables/src/: clean_string.rs  confusable.rs  lib.rs
crates/is-rtl/: CHANGELOG.md  Cargo.toml  README.md
crates/is-rtl/src/: lib.rs
src/: main.rs
