[package]
name = "confusables"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AntoniosBarotsis/confusables"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", default-features = false }

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
is-rtl = "0.1.1"
