[package]
name = "confusables-playground"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confusables = { path = "./crates/confusables" }

[workspace]
members = [
  "crates/confusables",
  "crates/confusables-js",
  "crates/is-rtl"
]

[profile.release]
lto = true
