[package]
name = "confusables-js"
version = "0.1.0"
description = "Un-confusing your Unicode"
authors = ["Antonios Barotsis"]
license = "GPL-3.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confusables = { path = "../confusables" }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
