[package]
name = "confusables"
description = "Utilities around Unicode confusables/homoglyphs"
repository = "https://github.com/AntoniosBarotsis/confusables/tree/main/crates/confusables"
keywords = ["confusables", "homoglyphs", "unicode"]
readme = "README.md"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.1", default-features = false }

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
